tests/scan/fixtures/validation/negative/clean_npm_shai_hulud_legit/src/index.js
// Trivial helper for the bun-runtime-helper package. Runs on both
// Bun and Node.js. Intentionally contains no known campaign
// indicators from any tracked supply-chain attack corpus.
export function hello() {
  return "hi";
}
